# face-id-matcher

./: .gitignore  CPS-221-spike-report.md  Dockerfile  Dockerfile.huggingface  Dockerfile.render  README.md  compressed_results.csv  vercel.json
batch/: batch.py  requirements.txt  sample_pairs.csv
batch-cpp/: CMakeLists.txt  README.md
batch-cpp/src/: face_match.cpp  face_match.h  main.cpp
batch-java/: README.md  pom.xml
batch/providers/: azure_face_provider.py  base.py  deepface_provider.py  dlib_provider.py  faceplusplus_provider.py  insightface_provider.py  megamatcher_provider.py  rekognition_provider.py
samples/: CPS-221-batch-test-results.md  generate_pairs.py  kaggle_pairs.csv  kaggle_results.csv
samples/batch_upload/: RESULTS_INSIGHTFACE.md  pairs.csv  results_insightface.csv  results_insightface_t0.7.csv
samples/dirty-pairs/: deepface_results.csv  faceplusplus_results.csv  faceplusplus_rotated_results.csv  megamatcher_results.csv  pairs.csv  rekognition_results.csv  results.csv
samples/kaggle/: RESULTS_DIRTY_TEST.md  RESULTS_INSIGHTFACE.md  dirty_ground_truth.csv  dirty_pairs.csv  dirty_results.csv  gen_dirty.py  gen_dirty_pairs_dir.py  megamatcher_final.csv  megamatcher_original_results.csv  original_pairs.csv  rekognition_results.csv  results_t0.7.csv  selfie_id.csv
server/: main.py  requirements.txt
web/: index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
web/scripts/: download-models.cjs
web/src/: App.tsx
web/src/components/: BatchMatcher.tsx  CsvViewer.tsx  ImageCapture.tsx  MatchResult.tsx  (+1 more)
(+5 files in other folders)
